--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -10,9 +10,15 @@ window:
 
 font:
   size: 11.0
-  family:
-    - Fira Code
-    - Noto Sans CJK JP
+  normal:
+    family: Hack Nerd Font
+    style: Regular
+  bold:
+    family: Hack Nerd Font
+    style: Bold
+  italic:
+    family: Hack Nerd Font
+    style: Regular Italic
 
 schemes:
   # Tokyo Night theme, based on both:
