--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,65 +1,107 @@
 format = """
 [░▒▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
+$os\
+[ ](fg:#a3aed2 bg:#002b55)\
 $directory\
-[](fg:#769ff0 bg:#394260)\
+[ ](fg:#002b55 bg:#004080)\
 $git_branch\
+[ ](fg:#004080 bg:#0055aa)\
 $git_status\
-[](fg:#394260 bg:#212736)\
+[ ](fg:#0055aa bg:#006ad5)\
+$git_metrics\
+[](fg:#006ad5)\
+$fill\
+[](fg:#006ad5)\
+[ ](fg:#0055aa bg:#006ad5)\
+[ ](fg:#004080 bg:#0055aa)\
 $nodejs\
-$rust\
 $golang\
-$php\
-[](fg:#212736 bg:#1d2230)\
+$python\
+[ ](fg:#002b55 bg:#004080)\
+$cmd_duration\
+[ ](fg:#a3aed2 bg:#002b55)\
 $time\
-[ ](fg:#1d2230)\
-\n$character"""
+[▓▒░](fg:#a3aed2)\
+\n$character\
+"""
+
+[os]
+format = "[$symbol]($style)"
+style = 'fg:#394260 bg:#a3aed2'
+disabled = false
+
+[os.symbols]
+Macos = "  "
+Ubuntu = "  "
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
-format = "[ $path ]($style)"
-truncation_length = 10
+truncation_length = 6
+truncation_symbol = '  '
 truncate_to_repo = false
-truncation_symbol = "…/"
-
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = " "
-"Pictures" = " "
+home_symbol = '  ~'
+style = 'fg:#00aaaa bg:#002b55'
+read_only = '󰌾  '
+read_only_style = 'fg:#f7768e bg:#002b55'
+format = '[ $path ]($style)[$read_only]($read_only_style)'
 
 [git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+symbol = ' '
+truncation_length = 4
+truncation_symbol = ''
+style = 'fg:#00aaaa bg:#004080'
+format = '[$symbol $branch(:$remote_branch) ]($style)'
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+style = 'fg:#00aaaa bg:#0055aa'
+conflicted = '='
+ahead = '⇡${count}'
+behind = '⇣${count}'
+diverged = '⇕'
+up_to_date = '✓'
+untracked = '?'
+stashed = '$'
+modified = '!${count}'
+renamed = '»'
+deleted = '✘'
+format = '([\[$all_status$ahead_behind\] ]($style))'
+
+[git_metrics]
+added_style = 'fg:#00aaaa bg:#006ad5'
+deleted_style = 'fg:#00aaaa bg:#006ad5'
+format = '[+$added/-$deleted ]($deleted_style)'
+disabled = false
+
+[fill]
+symbol = '─'
+style = '#00aaaa'
+
+[python]
+symbol = ''
+format = '[[ $symbol($version)](fg:#00aaaa bg:#002b55)]($style)'
+style = 'fg:#00aaaa bg:#002b55'
 
 [nodejs]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[rust]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+style = 'fg:#00aaaa bg:#002b55'
+format = '[[ $symbol($version)](fg:#00aaaa bg:#002b55)]($style)'
 
 [golang]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[php]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+style = 'fg:#00aaaa bg:#002b55'
+format = '[[ $symbol ($version)](fg:#00aaaa bg:#002b55)]($style)'
 
 [time]
 disabled = false
-time_format = "%R" # Hour:Minute Format
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+time_format = "%R"
+style = "bg:#00aaaa"
+format = '[[   $time](fg:#394260 bg:#a3aed2)]($style)'
+
+[character]
+success_symbol = '[❯❯](bold #00ffff)'
+error_symbol = '[❯❯](bold red)'
+
+[cmd_duration]
+min_time = 1
+style = 'fg:#00aaaa bg:#002b55'
+format = "[  $duration]($style)"
+
