fix: starship.toml

--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -59,7 +59,7 @@ behind = '⇣${count}'
 diverged = '⇕'
 up_to_date = '✓'
 untracked = '?'
-stashed = '$'
+stashed = 's'
 modified = '!${count}'
 renamed = '»'
 deleted = '✘'
