--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -6,6 +6,7 @@ shell:
     - "zellij attach --index 0 --create"
 
 window:
+  title: Alacritty
   opacity: 0.55
 
 font:
@@ -19,6 +20,9 @@ font:
   italic:
     family: Hack Nerd Font
     style: Regular Italic
+
+selection:
+  save_to_clipboard: true
 
 schemes:
   # Tokyo Night theme, based on both:
@@ -52,3 +56,13 @@ schemes:
 
 colors: *tokyo-night
 
+key_bindings:
+  - { key: Comma,     mods: Command,      command:
+      {program: "sh", args: ["-c","open ~/.config/alacritty/alacritty.yml"]}     }
+  - { key: N,         mods: Command,      action: SpawnNewInstance        }
+  - { key: Space,     mods: Alt,          chars: " "                      }
+  - { key: Back,      mods: Super,   chars: "\x15"                        } # delete word/line
+  - { key: Left,      mods: Alt,     chars: "\x1bb"                       } # one word left
+  - { key: Right,     mods: Alt,     chars: "\x1bf"                       } # one word right
+  - { key: Left,      mods: Command, chars: "\x1bOH",   mode: AppCursor   } # Home
+  - { key: Right,     mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
