add: tmux popup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,8 @@ bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
+bind p popup -w80% -h80% -E
+bind g popup -w80% -h80% -E lazygit
 
 # copy mode
 bind C-v copy-mode
