fix: tmux keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,21 +50,23 @@ set-option -g pane-active-border-style "fg=color051"
 # keybind
 bind \\ split-window -h
 bind - split-window -v
-bind t new-window
 bind d confirm-before kill-window
 bind r command-prompt -p "Name: " "rename-window '%%'"
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind m select-window -t :+
-bind n select-window -t :-
-bind -r H resize-pane -L 10
-bind -r J resize-pane -D 10
-bind -r K resize-pane -U 10
-bind -r L resize-pane -R 10
-bind p popup -w80% -h80% -E
-bind g popup -w80% -h80% -E lazygit
+
+# no prefix keybind
+bind -n M-p run-shell "source ~/.zshrc && tmuxPopup"
+bind -n M-o run-shell "source ~/.zshrc && toggleOpacity"
+bind -n M-Left resize-pane -L 10
+bind -n M-Down resize-pane -D 10
+bind -n M-Up resize-pane -U 10
+bind -n M-Right resize-pane -R 10
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+bind -n M-t new-window
+bind -n M-m select-window -t :+
+bind -n M-n select-window -t :-
 
 # copy mode
 bind C-v copy-mode
