fix: tmux keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,10 +52,11 @@ bind \\ split-window -h
 bind - split-window -v
 bind d confirm-before kill-window
 bind r command-prompt -p "Name: " "rename-window '%%'"
+bind p run-shell "source ~/.zshrc && tmuxPopup"
+bind o run-shell "source ~/.zshrc && toggleOpacity"
+bind t new-window
 
 # no prefix keybind
-bind -n M-p run-shell "source ~/.zshrc && tmuxPopup"
-bind -n M-o run-shell "source ~/.zshrc && toggleOpacity"
 bind -n M-Left resize-pane -L 10
 bind -n M-Down resize-pane -D 10
 bind -n M-Up resize-pane -U 10
@@ -64,7 +65,6 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-bind -n M-t new-window
 bind -n M-m select-window -t :+
 bind -n M-n select-window -t :-
 
