--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,8 +52,8 @@ bind \\ split-window -h
 bind - split-window -v
 bind d confirm-before kill-window
 bind r command-prompt -p "Name: " "rename-window '%%'"
-bind p run-shell "source ~/.zshrc && tmuxPopup"
-bind o run-shell "source ~/.zshrc && toggleOpacity"
+bind p run-shell 'bash -c "source ~/.zshrc ; tmuxPopup"'
+bind o run-shell 'bash -c "source ~/.zshrc ; toggleOpacity"'
 bind t new-window
 
 # no prefix keybind
