fix: bash -c to zsh -c

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ bind \\ split-window -h
 bind - split-window -v
 bind d confirm-before kill-window
 bind r command-prompt -p "Name: " "rename-window '%%'"
-bind p run-shell 'bash -c "source ~/.zshrc ; tmuxPopup"'
+bind p run-shell 'zsh -c "source ~/.zshrc ; tmuxPopup"'
 bind t new-window
 
 # no prefix keybind
