--- a/.config/alacritty/alacritty.copy.yml
+++ b/.config/alacritty/alacritty.copy.yml
@@ -1,9 +1,9 @@
 shell:
-  program: /bin/zsh
+  program: /usr/bin/zsh
   args:
     - -l
     - -c
-    - "zellij attach --index 0 --create"
+    - "tmux"
 
 window:
   opacity: 1
@@ -11,15 +11,6 @@ window:
 
 font:
   size: 11.0
-  normal:
-    family: Hack Nerd Font
-    style: Regular
-  bold:
-    family: Hack Nerd Font
-    style: Bold
-  italic:
-    family: Hack Nerd Font
-    style: Regular Italic
 
 selection:
   save_to_clipboard: true
@@ -56,6 +47,3 @@ schemes:
 
 colors: *tokyo-night
 
-key_bindings:
-  - { key: Comma,     mods: Command,      command:
-      {program: "sh", args: ["-c","open ~/.config/alacritty/alacritty.yml"]}     }
