--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -25,6 +25,10 @@ foreground = "#a9b1d6"
 [font]
 size = 11.0
 
+[font.normal]
+family = "Jetbrainsmono Nerd Font"
+style = "Regular"
+
 [selection]
 save_to_clipboard = true
 
