--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,41 +1,83 @@
-[colors.bright]
-black = "#444b6a"
-blue = "#7da6ff"
-cyan = "#0db9d7"
-green = "#b9f27c"
-magenta = "#bb9af7"
-red = "#ff7a93"
-white = "#acb0d0"
-yellow = "#ff9e64"
+[shell]
+args = ["-c", "-l", "tmux"]
+program = "/bin/zsh"
 
-[colors.normal]
-black = "#32344a"
-blue = "#7aa2f7"
-cyan = "#449dab"
-green = "#9ece6a"
-magenta = "#ad8ee6"
-red = "#f7768e"
-white = "#787c99"
-yellow = "#e0af68"
-
-[colors.primary]
-background = "#1a1b26"
-foreground = "#a9b1d6"
+[window]
+opacity = 1
+decorations = "None"
+option_as_alt = "OnlyLeft"
+[window.dimensions]
+columns = 155
+lines = 45
+[window.padding]
+x = 2
+y = 2
 
 [font]
 size = 11.0
-
 [font.normal]
 family = "Jetbrainsmono Nerd Font"
 style = "Regular"
+[font.bold]
+family = "Jetbrainsmono Nerd Font"
+style = "Regular"
+[font.italic]
+family = "Jetbrainsmono Nerd Font"
+style = "Regular"
+[font.bold_italic]
+family = "Jetbrainsmono Nerd Font"
+style = "Regular"
+
+[colors.primary]
+background = '#1a1b26'
+foreground = '#a9b1d6'
+[colors.normal]
+black   = '#32344a'
+red     = '#f7768e'
+green   = '#9ece6a'
+yellow  = '#e0af68'
+blue    = '#7aa2f7'
+magenta = '#ad8ee6'
+cyan    = '#449dab'
+white   = '#787c99'
+[colors.bright]
+black   = '#444b6a'
+red     = '#ff7a93'
+green   = '#b9f27c'
+yellow  = '#ff9e64'
+blue    = '#7da6ff'
+magenta = '#bb9af7'
+cyan    = '#0db9d7'
+white   = '#acb0d0'
 
 [selection]
 save_to_clipboard = true
 
-[shell]
-args = ["-l", "-c", "tmux"]
-program = "/usr/bin/zsh"
+[mouse]
+hide_when_typing = true
 
-[window]
-opacity = 1
-option_as_alt = "OnlyLeft"
+[[keyboard.bindings]]
+action = "Paste"
+key = "v"
+mods = "Alt"
+[[keyboard.bindings]]
+key = "="
+mods = "Alt"
+action = "IncreaseFontSize"
+[[keyboard.bindings]]
+key = "-"
+mods = "Alt"
+action = "DecreaseFontSize"
+[[keyboard.bindings]]
+key = "f"
+mods = "Alt"
+action = "ToggleMaximized"
+[[keyboard.bindings]]
+key = "c"
+mods = "Alt"
+action = "ToggleViMode"
+[[keyboard.bindings]]
+key = "s"
+mods = "Alt"
+action = "SearchForward"
+
