fix: tmux keybind

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,18 +48,31 @@ set -g pane-border-lines double
 set-option -g pane-active-border-style "fg=color051"
 
 # keybind
-bind \\ split-window -h
-bind - split-window -v
-bind d confirm-before kill-window
+bind u split-window -v
+bind y split-window -h
+bind t new-window
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+bind m select-window -t :+
+bind n select-window -t :-
+bind d kill-pane
+bind w kill-window
 bind r command-prompt -p "Name: " "rename-window '%%'"
 bind p run-shell 'zsh -c "source ~/.zshrc ; tmuxPopup"'
-bind t new-window
 
 # no prefix keybind
-bind -n M-Left resize-pane -L 10
-bind -n M-Down resize-pane -D 10
-bind -n M-Up resize-pane -U 10
-bind -n M-Right resize-pane -R 10
+bind -n M-u split-window -v
+bind -n M-y split-window -h
+bind -n M-H resize-pane -L 5
+bind -n M-J resize-pane -D 5
+bind -n M-K resize-pane -U 5
+bind -n M-L resize-pane -R 5
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
