--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -42,3 +42,9 @@ github = "hlissner/zsh-autopair"
 
 [plugins.oh-my-zsh]
 github = "ohmyzsh/ohmyzsh"
+
+[plugins.git-open]
+github = "paulirish/git-open"
+
+[plugins.fast-syntax-highlighting]
+github = "zdharma/fast-syntax-highlighting"
