--- a/script/mac/Brewfile
+++ b/script/mac/Brewfile
@@ -2,9 +2,8 @@ brew "git"
 brew "lazygit"
 brew "neovim"
 brew "tmux"
+brew "mas"
 
-cask "wezterm"
-cask "alacritty"
 cask "clipy"
 cask "microsoft-edge"
 cask "google-chrome"
