--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -43,7 +43,7 @@ read_only_style = 'fg:#f7768e bg:#021631'
 format = '[ $path ]($style)[$read_only]($read_only_style)'
 
 [git_branch]
-symbol = ' '
+symbol = ''
 style = 'fg:#00aaaa bg:#03214a'
 format = '[$symbol $branch(:$remote_branch) ]($style)'
 
